SELECTの修正